crates/plotnik-tests/tests/02-parser/recovery_validation/capture_space_after_dot_breaks_chain.txt
Q = (identifier) @foo. bar
------------------ DIAGNOSTICS -------------------
error: node kinds must be parenthesized
 --> query.ptk:1:24
  |
1 | Q = (identifier) @foo. bar
  |                        ^^^
  |
help: wrap in parentheses
  |
1 - Q = (identifier) @foo. bar
1 + Q = (identifier) @foo. (bar)
  |
